# shell2batch

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench_convert.rs
docs/: index.html
docs/api/: aliases.js  crates.js  search-index.js  settings.html  source-files.js
docs/api/shell2batch/: all.html  fn.convert.html  index.html  sidebar-items.js
docs/api/src/shell2batch/: converter.rs.html  lib.rs.html
examples/: example.rs
src/: converter.rs  converter_test.rs  lib.rs  lib_test.rs
tests/: convert_test.rs  test_convert.rs
